2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-2.patch: New file. Replace ...
	* binutils-init-mixed-1.patch: This. Removed.
	* README: Likewise.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-1.patch: New.
	* README: Apply it.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-3.patch: New file. Replace ...
	* binutils-lto-mixed-2.patch: This. Removed.
	* README: Likewise.

2010-12-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-2.patch: New file. Replace ...
	* binutils-lto-mixed-1.patch: This. Removed.
	* README: Likewise.

2010-12-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-1.patch: Initialize header.next to NULL.

2010-12-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-1.patch: New file. Replace ...
	* binutils-2stage-5.patch: This. Removed.
	* README: Likewise.

2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-5.patch: New file. Replace ...
	* binutils-2stage-4.patch: This. Removed.
	* README: Likewise.

2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-4.patch: New file. Replace ...
	* binutils-2stage-3.patch: This. Removed.
	* README: Likewise.

2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-3.patch: New file. Replace ...
	* binutils-2stage-1.patch: This. Removed.
	* README: Likewise.

2010-12-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-indirect-4.patch: New file. Replace ...
	* binutils-indirect-3.patch: This. Removed.
	* README: Likewise.

2010-12-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-1.patch: New.
	* README: Apply it.

2010-11-20  H.J. Lu  <hjl.tools@gmail.com>

	* ld-pr46319-1.patch: Removed.
	* README: Likewise.

2010-11-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11137-1.patch: Removed.
	* README: Likewise.

2010-11-10  H.J. Lu  <hjl.tools@gmail.com>

	* ld-pr46319-1.patch: New.
	* README: Apply it.

2010-10-29  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-zlib-5.patch: Removed.